@@ -1,5 +1,7 @@
 2010-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
+	* src/main.c: Better handling of ncurses const'ness. By Pavel Roskin.
+
 	* src/main.c, src/wkeys.c, src/minicom.c: Fix crash when terminal
 	  reads return EOF. By Pavel Roskin.
 
